# fe

./: Cargo.toml  source.fe
examples/: embedded_class.rs
fe-derive/: Cargo.toml
fe-derive/src/: lib.rs
src/: add_std.rs  as_variant.rs  ast.rs  class.rs  compilation.rs  compiler.rs  error.rs  format.rs  func.rs  lib.rs  parser.rs  program.rs  runtime.rs  spanned.rs  ty.rs  variant.rs
