[package]
name = "fe"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe-derive = { path = "fe-derive", optional = true }

[features]
default = ["derive"]
derive = ["fe-derive"]

[[example]]
name = "embedded_class" 
required-features = ["derive"]